fixed misaligned close icon

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -99,6 +99,7 @@ header {
   padding: 0px;
   margin-right: 32px;
   font-size: 43px;
+  margin-right: 6%;
   margin-top: 5px;
 }
 
